# rust_julia_demo

./: ARCHITECTURE.md  Cargo.toml
julia_src/: binance_client.jl  main.jl  stress_test.jl  test.jl  test_gemini.jl
src/: lib.rs  lib_gemini.rs  lib_old.rs
src/util/: callback_util.rs  mod.rs
