[package]
name = "rust_julia_demo"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"] # C-style Dynamic Library로 컴파일하도록 설정

[dependencies]
tokio = { version = "1.47", features = ["rt", "macros", "time", "rt-multi-thread"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
arc-swap = "1.7.1"
once_cell = "1.21.3"
jl-sys = { version = "0.25.1", features = ["julia-1-11"] }
jlrs = { version = "0.21.1", features = ["julia-1-11", "ccall"] }
